--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
     {% if not session.logado %}
     <a href="{{ url_for('login') }}">login</a>
     {%  else %}
-    <a href="{{ url_for('logout') }}">logout</a>>
+    <a href="{{ url_for('logout') }}">logout</a>
     {%  endif %}
   </div>
   {% for mensagem in get_flashed_messages() %}
